# SnnDL

./: .gitignore  CHANGELOG.md  LICENSE  Makefile.am  README.md  configure.ac
SnnDL/: Makefile  Makefile.am  Makefile.am.backup  Makefile.in  MultiCorePE.cc  MultiCorePE.cc.backup  MultiCorePE.h  MultiCorePE.h.backup  MultiCorePE.lo  MultiCorePERouterInterface.cc  MultiCorePERouterInterface.h  MultiCorePERouterInterface.lo  OptimizedInternalRing.cc  OptimizedInternalRing.h  OptimizedInternalRing.lo  README.md  SimpleNetworkWrapper.cc  SimpleNetworkWrapper.h  SimpleNetworkWrapper.lo  SimpleTestEvent.cc  SimpleTestEvent.h  SimpleTestEvent.lo  SnnCoreAPI.h  SnnNIC.cc  SnnNIC.h  SnnNIC.lo  SnnNetworkAdapter.cc  SnnNetworkAdapter.h  SnnNetworkAdapter.lo  SnnPE.cc  SnnPE.h  SnnPE.lo  SnnPEParentInterface.h  SnnPESubComponent.cc  SnnPESubComponent.h  SnnPESubComponent.lo  SpikeEvent.h  SpikeEventWrapper.cc  SpikeEventWrapper.h  SpikeEventWrapper.lo  (+12 more)
SnnDL/.deps/: MultiCorePE.Plo  MultiCorePERouterInterface.Plo  OptimizedInternalRing.Plo  ProcessingUnit.Plo  SharedL2Cache.Plo  SimpleNetworkWrapper.Plo  SimpleTestEvent.Plo  SnnNIC.Plo  SnnNetworkAdapter.Plo  SnnNode.Tpo  SnnPE.Plo  SnnPESubComponent.Plo  SpikeEventWrapper.Plo  SpikeMUX.Plo  SpikeMux.Plo  SpikeSource.Plo  WeightLoader.Plo
SnnDL/.libs/: libSnnDL.la  libSnnDL.lai
core_sys/: SST_SnnDL_4x4_Configuration_Guide.md  test_corrected_4x4.py
examples/: basic_example.py  example_spikes.txt
src/sst/elements/SnnDL/: Makefile.am  README.md  SnnInterface.h  SnnNIC.cc  SnnNIC.h  SnnPE.cc  SnnPE.h  SpikeEvent.h  SpikeSource.cc  SpikeSource.h  configure.m4
tests/: simple_test.txt  simple_weights.txt  test_2nodes.py  test_minimal_snn.py  test_network_spikes.py  test_simple_snn.py  test_snn_interface.py  test_spikes.txt
